Fix -webkit- horizontal scrollbar style

--- a/source/css/_base/_animation.less
+++ b/source/css/_base/_animation.less
@@ -255,6 +255,7 @@ to{
 
 ::-webkit-scrollbar {
   width: 0.08rem;
+  height: 0.08rem;/*fix*/
 }
 ::-webkit-scrollbar-thumb {
   .border-radius(3px);
